--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[workspace]
+members = [
+    "birthday"
+]
+
+
+[workspace.dependencies]
 tokio = {version = "1", features = ["full"]}
+regex = "1.10.3"
+chrono = "0.4"
